# seiga-install

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTORS  Cargo.toml  Collaborators.md  README.md  frontend.go  go.mod  go.sum  install.py  pyproject.toml  schema.json  schema.toml  test.json  test.toml  todo.txt
.github/: CONTRIBUTING
backend/: aya.py  basic-tomlforsys_monitor.rs.toml  command.py  install.py  options.py  sys_temp_monitor.rs  system notification  tasks.py
backend/src/: main.rs  tui.rs
frontend/: form.go  main.go  schema.go  schema.json
huh/: field_confirm.go  field_input.go  field_multiselect.go  field_note.go  field_select.go  field_text.go  form.go
huh@v0.3.0/: field_select.go
interface/: Cargo.toml  cool.go  go.mod  schema.toml
interface-proc/: Cargo.toml
interface-proc/src/: lib.rs
interface/src/: lib.rs  main.rs
newhwdwarechecking/: main.rs
timezones/: config.toml  go.mod  go.sum  real.go
