[package]
name = "interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = "0.26.2"
toml = "0.8.12"
interface-proc = { path = "../interface-proc" }
lazy_static = "1.4.0"
serde = { version = "1.0.198", features = ["derive"] }
crossterm = "0.27.0"
ron = "0.8.1"

[lib]
name = "interface_modules"
path = "src/lib.rs"

[[bin]]
name = "interface_tui"
path = "src/main.rs"
